--- a/Mi pagina web/NBA2k.css
+++ b/Mi pagina web/NBA2k.css
@@ -95,7 +95,7 @@ section.textos-header {
     text-decoration: none;
     display: block;
     padding: 10px 10px;
-    
+
 }
 
 #menu ul li a:hover {
@@ -150,4 +150,9 @@ ul.cabecera-negra {
 a.correo {
     text-decoration: none;
     color: red;
+}
+
+div.imagen-port {
+  justify-content: center;
+  align-items: center;
 }
